update initial-app (to do: add favorites)

--- a/staff/carolina-zhou/initial-app/index.html
+++ b/staff/carolina-zhou/initial-app/index.html
@@ -91,10 +91,10 @@
                 <h3>Search</h3>
                 <form class="search__form">
                     <label class="search__label" for="search">Search</label>
-                    <input class="search__input" id="search" name="search" type="text" placeholder="Patito, patito..." >
+                    <input class="search__input" id="search" name="query" type="text" placeholder="Patito, patito..." >
                     <button class="search__button" type="submit" value="submit">Go!</button>
                 </form>
-                <p class="panel__feedback feedback feedback--error hide">A message.</p>
+                <p class="panel__feedback feedback feedback--error">A message.</p>
             </section>
 
             <!-- Results -->
