--- a/staff/jaume-villarreal/initial-app/js6/index.html
+++ b/staff/jaume-villarreal/initial-app/js6/index.html
@@ -82,12 +82,12 @@
             <!-- Detail -->
             <section class="duck-detail hide">
                 <h3>Title</h3>
-                <!-- <button class="favorite">Favorite</button> -->
                 <img class="duck-detail__photo" src="http://whetever.com/image.jpg">
                 <span class="duck-detail__price">Price</span>
                 <p>Description</p>
                 <a href="" class="btn">Link</a>
                 <a href="" class="btn btn__back">Back</a>
+                <button class="favorite">Favorite</button>
             </section>
         </section>
     </main>
