update intentando poner favorites que funcione

--- a/staff/adria-arquimbau/initial-app/9.2/index.html
+++ b/staff/adria-arquimbau/initial-app/9.2/index.html
@@ -66,6 +66,7 @@
                     <button>Search</button>
                 </form>
                 <p class="panel__feedback feedback feedback--error hide">A message.</p>
+                
             </section>
 
             <!-- Results -->
@@ -83,8 +84,25 @@
                 <img class="duck-detail__photo" src="">
                 <span class="duck-detail__price">Price</span>
                 <p>Description</p>
+                <button>Favorites</button>
                 <a href="">Link</a>
-                <a href="">back</a>
+                <a href="">Back</a>
+                <a href="">Favorites</a>
+            </section>
+
+            <!-- Favorites -->
+            <section class="duck-favorite show">
+                <h3>Title</h3>
+                <img class="duck-detail__photo" src="">
+                <span class="duck-detail__price">Price</span>
+                <p>Description</p>
+                <ul>
+                    <li>Duck 1</li>
+                    <li>Duck 2</li>
+                    <li>Duck 3</li>
+                </ul>
+                <a href="">Link</a>
+                <a href="">Back</a>
             </section>
         </section>
     </main>
@@ -105,6 +123,7 @@
     <script src="components/custom/duck-home.js"></script>
     <script src="components/custom/duck-results.js"></script>
     <script src="components/custom/duck-detail.js"></script>
+    <script src="components/custom/duck-favorite.js"></script>
     <script src="index.js"></script>
 </body>
 
