changes initial-app class 1/04

--- a/staff/ara-manjon/initial-app/index.html
+++ b/staff/ara-manjon/initial-app/index.html
@@ -16,7 +16,7 @@
 
         <!-- initial panel -->
         <section class="landing show">
-            <a class ="landing__button" href="">/register</a> <a class ="landing__button" href="">/login</a>
+            <a class ="landing but" href="">/register</a> <a class ="landing but" href="">/login</a>
         </section>
 
         <!-- register panel -->
@@ -29,11 +29,11 @@
                 <label for="email">E-mail</label>
                 <input type="email" id="email">
                 <label for="password">Password</label>
-                <input type="password" id="password">
-                <button class = "register__button" type="submit">/register</button>
+                <input type="password" id="password"><br>
+                <button class = "register but" type="submit">/register</button>
             </form>
             <p class="feedback feedback--error"></p>
-            <a class ="back" href="">/back</a>
+            <a class ="back but" href="">/back</a>
         </section>
 
         <!-- register success panel -->
@@ -48,16 +48,16 @@
                 <input type="email" id="email">
                 <label for="password">Password</label>
                 <input type="password" id="password">
-                <button type="submit">/login</button>
+                <button class= "login but"type="submit">/login</button>
             </form>
             <p class="feedback feedback--error"></p>
-            <a class ="back" href="">/back</a>
+            <a class ="back but" href="">/back</a>
         </section>
 
         <!-- Home -->
         <section class="duck-home hide">
             <h2>Welcome!</h2>
-            <button class ="back">/logout</button>
+            <button class ="back but">/logout</button>
 
             <!-- Search -->
             <section class="search">
