--- a/staff/lluis-agusti/initial-app/9/index.html
+++ b/staff/lluis-agusti/initial-app/9/index.html
@@ -20,16 +20,18 @@
 
         <!-- Register -->
         <section class="register hide">
-            <form>
-                <label for="name">Name</label>
-                <input type="text" id="name" placeholder="Name">
-                <label for="surname">Surname</label>
-                <input type="text" id="surname" placeholder="Surname">
-                <label for="email">E-mail</label>
-                <input type="email" id="email" placeholder="Email">
-                <label for="password">Password</label>
-                <input type="password" id="password" placeholder="Password">
-                <button class="btn" type="submit">Register</button>
+            <form class="formtest">
+                <label for="name">Name</label><br>
+                <input type="text" id="name" placeholder="Name"><br>
+                <label for="surname">Surname</label><br>
+                <input type="text" id="surname" placeholder="Surname"><br>
+                <label for="email">E-mail</label><br>
+                <input type="email" id="email" placeholder="Email"><br>
+                <label for="password">Password</label><br>
+                <input type="password" id="password" placeholder="Password"><br>
+                <button class="btn" type="submit">Register</button><br>
+                <button class="btn" type="reset" value="Reset">Borrrar i borrar</button><br>
+
             </form>
             <p class="panel__feedback feedback feedback--error"></p>
             <a class="btn" href="">back</a>
@@ -56,7 +58,7 @@
         <!-- Home -->
         <section class="duck-home hide">
             <h2>Welcome!</h2>
-            <button>Logout</button>
+            <button class="btn">Logout</button>
 
             <!-- Search -->
             <section class="search">
@@ -86,6 +88,12 @@
                 <p>Description</p>
                 <a class="btn" href="">Link</a>
                 <a class="btn" href="">back</a>
+            </section>
+
+                    <!-- Favourites -->
+            <section class="duck-favourites show">
+                    <ul class="painter"></ul>
+                    <h4></h4>
             </section>
         </section>
     </main>
