update http requests testing

--- a/staff/manuel-galvez/initial-app/duck-app/SpecRunner.html
+++ b/staff/manuel-galvez/initial-app/duck-app/SpecRunner.html
@@ -19,7 +19,7 @@
 		<script src="utils/call.js"></script>
 		<script src="utils/curray.js"></script>
 		<script src="data/index.js"></script>
-		<script src="logic/logic.js"></script>
+		<script src="logic/index.js"></script>
 
 		<!-- include spec files here... -->
 		<script src="logic/index.spec.js"></script>
