--- a/staff/ara-manjon/initial-app/10/index.html
+++ b/staff/ara-manjon/initial-app/10/index.html
@@ -84,6 +84,7 @@
                 <span class="duck-detail__price">Price</span>
                 <p>Description</p>
                 <a href="">Link</a>
+                <a href="">back</a>
             </section>
             
             <!-- Favs -->
