start working on style

--- a/staff/manuel-galvez/initial-app/duck-app/index.html
+++ b/staff/manuel-galvez/initial-app/duck-app/index.html
@@ -14,7 +14,8 @@
 
 			<!-- Landing -->
 			<section class="landing show">
-				<a href="">Register</a> or <a href="">Login</a>.
+				<a href="" class="btn btn--blue">Register</a>
+				<a href="" class="btn btn--white">Login</a>.
 			</section>
 
 			<!-- Register -->
