--- a/staff/christian-haag/e-duck/index.html
+++ b/staff/christian-haag/e-duck/index.html
@@ -16,10 +16,14 @@
     <script src="vendor/react/16.8.6/react-dom.development.js"></script>
     <script src="vendor/babel/7.5.5/babel.min.js"></script>
 
-    <!-- <script src="index.js"></script> -->
-    <script src="logic/index.js"></script>
     <script src="utils/call.js"></script>
     <script src="data/index.js"></script>
+    <script src="logic/index.js"></script>
+
+    <script src="components/results.js" type="text/babel"></script>
+    <script src="components/search.js" type="text/babel"></script>
+    <script src="components/duck-item.jsx" type="text/babel"></script>
+    <script src="components/landing.jsx" type="text/babel"></script>
     <script src="index.jsx" type="text/babel"></script>
 </body>
 
