--- a/staff/jaume-villarreal/e-duck/index.html
+++ b/staff/jaume-villarreal/e-duck/index.html
@@ -19,6 +19,10 @@
     <script src="utils/call.js"></script>
     <script src="data/index.js"></script>
     <script src="logic/index.js"></script>
+    <script src="components/results.jsx" type="text/babel"></script>
+    <script src="components/search.jsx" type="text/babel"></script>
+    <script src="components/duck-item.jsx" type="text/babel"></script>
+    <script src="components/landing.jsx" type="text/babel"></script>
     <script src="index.jsx" type="text/babel"></script>
 </body>
 
