add app.jsx navigation

--- a/staff/jaume-villarreal/e-duck/index.html
+++ b/staff/jaume-villarreal/e-duck/index.html
@@ -20,10 +20,14 @@
     <script src="data/index.js"></script>
     <script src="logic/index.js"></script>
     <script src="components/landing.jsx" type="text/babel"></script>
+    <script src="components/button.jsx" type="text/babel"></script>
     <script src="components/search.jsx" type="text/babel"></script>
     <script src="components/results.jsx" type="text/babel"></script>
     <script src="components/duck-item.jsx" type="text/babel"></script>
     <script src="components/duck-detail.jsx" type="text/babel"></script>
+    <script src="components/register.jsx" type="text/babel"></script>
+    <script src="components/login.jsx" type="text/babel"></script>
+    <script src="components/app.jsx" type="text/babel"></script>
     <script src="index.jsx" type="text/babel"></script>
 </body>
 
