--- a/staff/adria-arquimbau/e-duck/1/index.html
+++ b/staff/adria-arquimbau/e-duck/1/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <script src="https://kit.fontawesome.com/0ebe3f9bf2.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -24,6 +25,11 @@
     <script src="components/results.jsx" type="text/babel"></script>
     <script src="components/duck-item.jsx" type="text/babel"></script>
     <script src="components/duck-detail.jsx" type="text/babel"></script>
+    <script src="components/initialButton.jsx" type="text/babel"></script>
+    <script src="components/register.jsx" type="text/babel"></script>
+    <script src="components/login.jsx" type="text/babel"></script>
+    <script src="components/logged-button.jsx" type="text/babel"></script>
+
     <script src="index.jsx" type="text/babel"></script>
 </body>
 
