--- a/staff/christian-haag/e-duck/index.html
+++ b/staff/christian-haag/e-duck/index.html
@@ -19,11 +19,16 @@
     <script src="utils/call.js"></script>
     <script src="data/index.js"></script>
     <script src="logic/index.js"></script>
-
-    <script src="components/results.js" type="text/babel"></script>
-    <script src="components/search.js" type="text/babel"></script>
+    <script src="components/button.jsx" type="text/babel"></script>
+    <script src="components/search.jsx" type="text/babel"></script>
+    <script src="components/results.jsx" type="text/babel"></script>
     <script src="components/duck-item.jsx" type="text/babel"></script>
+    <script src="components/duck-detail.jsx" type="text/babel"></script>
+    <script src="components/favourite.jsx" type="text/babel"></script>
+    <script src="components/login.jsx" type="text/babel"></script>
     <script src="components/landing.jsx" type="text/babel"></script>
+    <script src="components/register.jsx" type="text/babel"></script>
+    <script src="components/app.jsx" type="text/babel"></script>
     <script src="index.jsx" type="text/babel"></script>
 </body>
 
